--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 24 09:53:47 CET 2020
-sdk.dir=C\:\\Users\\i516467\\AppData\\Local\\Android\\Sdk
+#Wed Apr 29 18:43:22 CEST 2020
+sdk.dir=C\:\\Users\\Marc\\AppData\\Local\\AndroidSDK
