--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'com.mikepenz:iconics-core:5.0.3'
     implementation 'com.mikepenz:material-design-iconic-typeface:2.2.0.6-kotlin@aar'
     implementation 'com.mikepenz:fastadapter:5.2.2'
-    implementation 'com.github.javiersantos:MaterialStyledDialogs:3.0.1'
+    implementation 'com.github.javiersantos:MaterialStyledDialogs:3.0.2'
 
     // dependencies for testing
     testImplementation 'junit:junit:4.13'
@@ -109,9 +109,9 @@ task downloadTranslations {
         // Main string file
         def f = new File("${project.projectDir}/src/main/res/values-ru/strings.xml")
         new URL("https://localise.biz/api/export/locale/ru.xml?format=android&key=${apiKey}").withInputStream{ i -> f.withOutputStream{ it << i }}
-        // Color file
-        f = new File("${project.projectDir}/src/main/res/values-ru/strings_colors.xml")
-        new URL("https://localise.biz/api/export/locale/ru.xml?format=android&key=${apiKeyColors}").withInputStream{ i -> f.withOutputStream{ it << i }}
+        // Color file (will be added again, when the translation is complete)
+        //f = new File("${project.projectDir}/src/main/res/values-ru/strings_colors.xml")
+        //new URL("https://localise.biz/api/export/locale/ru.xml?format=android&key=${apiKeyColors}").withInputStream{ i -> f.withOutputStream{ it << i }}
     }
 }
 
