--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -53,6 +55,10 @@ dependencies {
     implementation 'com.mikepenz:material-design-iconic-typeface:2.2.0.6-kotlin@aar'
     implementation 'com.mikepenz:fastadapter:5.3.1'
     implementation 'com.github.javiersantos:MaterialStyledDialogs:3.0.2'
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
     // dependencies for testing
     testImplementation 'junit:junit:4.13.1'
