--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
     </queries>
 
     <application
-        android:allowBackup="false"
         android:label="@string/app_name_cc"
+        android:name="com.chillibits.colorconverter.ColorConverterApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:requestLegacyExternalStorage="true"
