--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 05 09:33:04 CET 2020
-sdk.dir=C\:\\Users\\Marc\\AppData\\Local\\AndroidSDK
+#Wed Nov 25 11:34:30 CET 2020
+sdk.dir=C\:\\Users\\i516467\\AppData\\Local\\Android\\Sdk
