--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,8 @@ dependencies {
     implementation 'com.github.javiersantos:MaterialStyledDialogs:3.0.2'
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     // dependencies for testing
     testImplementation 'junit:junit:4.13.1'
