--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.20'
+    ext.hilt_version = '2.30.1-alpha'
     repositories {
         google()
         jcenter()
@@ -11,7 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
