--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.21'
+    ext.room_version = '2.3.0-alpha04'
     ext.hilt_version = '2.30.1-alpha'
     repositories {
         google()
