--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.mikepenz:material-design-iconic-typeface:2.2.0.8-kotlin@aar'
     implementation 'com.mikepenz:fastadapter:5.3.2'
     implementation 'com.github.javiersantos:MaterialStyledDialogs:3.0.2'
+    implementation 'com.chillibits:adobecolortool:1.0.0-alpha01'
 
     // Room dependencies
     implementation "androidx.room:room-runtime:$room_version"
