--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     time: "04:00"
     timezone: Europe/Berlin
   open-pull-requests-limit: 15
-  target-branch: beta
+  target-branch: dev
   reviewers:
   - marcauberer
   assignees:
