--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,17 @@
  * Copyright © Marc Auberer 2017-2021. All rights reserved
  */
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+}
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "com.mrgames13.jimdo.colorconverter"
         minSdkVersion 21
@@ -42,7 +44,6 @@ android {
 
 dependencies {
     // base dependencies
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.3.0-rc01'
     implementation 'androidx.core:core-ktx:1.5.0-beta03'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
