--- a/build.gradle
+++ b/build.gradle
@@ -8,21 +8,25 @@ buildscript {
     ext.hilt_version = '2.42'
     repositories {
         google()
+        mavenCentral()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
-        classpath 'com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.3.1'
+        classpath 'com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:10.4.0'
     }
 }
 
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
 }
 
