--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "32.0.0"
+    compileSdkVersion 33
+    buildToolsVersion "33.0.0"
     defaultConfig {
         applicationId "com.mrgames13.jimdo.colorconverter"
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 2704
         versionName "2.7.4"
         vectorDrawables.useSupportLibrary = true
@@ -42,12 +42,13 @@ android {
             pickFirsts += ['**/META-INFMANIFEST.MF', 'META-INF/library_release.kotlin_module']
         }
     }
+    namespace 'com.mrgames13.jimdo.colorconverter'
 }
 
 dependencies {
     // base dependencies
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.instantapps:instantapps:1.1.0'
     implementation 'com.google.android.play:core:1.10.3'
