--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.mikepenz.aboutlibraries.plugin'
@@ -42,6 +41,9 @@ android {
             pickFirsts += ['**/META-INFMANIFEST.MF', 'META-INF/library_release.kotlin_module']
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
     namespace 'com.mrgames13.jimdo.colorconverter'
 }
 
@@ -53,6 +55,7 @@ dependencies {
     implementation 'com.google.android.instantapps:instantapps:1.1.0'
     implementation 'com.google.android.play:core:1.10.3'
     implementation 'androidx.palette:palette-ktx:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.5'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
