--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,6 @@ updates:
   open-pull-requests-limit: 15
   target-branch: dev
   reviewers:
-  - marcauberer
+  - @chillibits/android-core-development
   assignees:
   - marcauberer
